# cine-rust

./: .env  Cargo.toml  docker-compose.yml
src/: main.rs
templates/: admin.html  auth.html  index.html  movie.html  profile.html
