[package]
name = "cine"
version = "0.1.0"
edition = "2024"

[general]
dirs = ["templates"]

[dependencies]
# Веб-фреймворк та асинхронність
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# База даних (PostgreSQL)
dotenvy = "0.15"

# Шаблони та серіалізація
askama = { version = "0.12", features = ["with-axum"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Робота з API (TMDB) та шифрування
reqwest = { version = "0.11", features = ["json"] }
bcrypt = "0.15"

tower-cookies = "0.10"

askama_axum = "0.4"

chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1.3"
axum-extra = { version = "0.12.5", features = ["cookie"] }


sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }



